se añaden animaciones y se corrigen otras en index e inicio

--- a/index.html
+++ b/index.html
@@ -126,27 +126,27 @@
                 <div class="img-card">
                     <img class="img-muestra" src="resources/images/trabajos/fanarts.jpg" alt="imagen de muestra 1">
                     <div class="descripcion">
-                        <p>Vale por una breve descripción</p>
+                        <p class="descripcion-texto">Stickers personalizables</p>
                     </div>
                 </div>
                 <div class="img-card">
                     <img class="img-muestra" src="resources/images/trabajos/sanvalentin2019 BG2.jpg"
                         alt="imagen de muestra 2">
                     <div class="descripcion">
-                        <p>Vale por una breve descripción</p>
+                        <p class="descripcion-texto">Fondos de Pantalla</p>
                     </div>
                 </div>
                 <div class="img-card">
                     <img class="img-muestra" src="resources/images/trabajos/minutemen.jpg" alt="imagen de muestra 3">
                     <div class="descripcion">
-                        <p>Vale por una breve descripción</p>
+                        <p class="descripcion-texto">Cliparts</p>
                     </div>
                 </div>
                 <div class="img-card">
                     <img class="img-muestra" src="resources/images/trabajos/sanvalentin2020.jpg"
                         alt="imagen de muestra 4">
                     <div class="descripcion">
-                        <p>Vale por una breve descripción</p>
+                        <p class="descripcion-texto">Miscelaneos</p>
                     </div>
                 </div>
             </section>
