--- a/inicio.html
+++ b/inicio.html
@@ -46,77 +46,42 @@
         <div class="content-one-grid-inicio">
             <div class="seccion-titulo"><h3>Ilustraciones</h3></div>
             <div class="seccion-container">
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/sanvalentin2019 BG1.jpg"
-                                alt="tarjeta de san valentín 2019">
-                                <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>San Valentín 2019 BG1</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/fanarts.jpg" alt="Fanarts">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Fanarts de mis personajes favoritos</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/sanvalentin2020.jpg" alt="tarjeta de san valentín 2020">
-                            <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>San Valentín 2020</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/sanvalentin2019 BG2.jpg"
+                        alt="San Valentín 2019 BG2">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Fondos de pantalla para Celular</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/bojack.jpg" alt="Bojack Horseman">
-                            <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>Bojack Horseman</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/minutemen.jpg" alt="Minutemen">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Posters de Películas</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/alaska.jpg" alt="personaje alaska">
-                            <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>Alaska</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/flipping.png" alt="imagen de muestra 1">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Vale por una descripción</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/fanarts.jpg" alt="Fanarts">
-                            <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>Fanarts</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/alaska.jpg"
+                        alt="imagen de muestra 2">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Vale por una descripción</p>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="resources/images/trabajos/illustracion.jpg" alt="Ilustracion">
-                            <div class="card-title">ejemplo</div>
-                        </div>
-                        <div class="card-content">
-                            <h3>Ilustración</h3>
-                            <p>vale por una descripción de la imagen</p>
-                        </div>
+                <div class="img-card">
+                    <img class="img-muestra" src="resources/images/trabajos/bojack.jpg" alt="imagen de muestra 3">
+                    <div class="descripcion">
+                        <p class="descripcion-texto">Vale por una descripción</p>
                     </div>
                 </div>
             </div>
