--- a/tienda.html
+++ b/tienda.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
@@ -20,7 +28,7 @@
                             src="resources/images/logos/PerfilA1.png" alt="Logo principal de home"></a></div>
                 <div class="title-container">
                     <div>
-                        <h1 class="title"><a class="title" href="index.html">Anabella Avena</a></h1>
+                        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
                     </div>
                     <div>
                         <p class="subtitle">Ilustradora & Diseñadora Gráfica</p>
@@ -30,132 +38,140 @@
             <!-- fin de header -->
         </div>
         <div class="menu-grid-tienda">
-            <div class="menu-grid">
-                <div class="main-menu-container fondo-menu">
-                    <nav class="main-menu-nav">
-                        <ul class="main-menu">
-                            <li class="menu-list"><a href="inicio.html">Inicio</a></li>
-                            <li class="menu-list"><a href="portfolio.html">Portfolio</a></li>
-                            <li class="menu-list"><a href="about-me.html">Sobre mí</a></li>
-                            <li class="menu-list"><a href="tienda.html">Tienda</a></li>
-                            <li class="menu-list"><a href="contacto.html">Contacto</a></li>
+            <!-- menú principal -->
+            <nav class="navbar navbar-expand-md fondo-menu">
+                <div class="container-fluid d-flex justify-content-end">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a aria-current="page" href="inicio.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="about-me.html">Sobre Mí</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="tienda.html">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
                         </ul>
-                    </nav>
+                    </div>
                 </div>
-            </div>
+            </nav>
+            <!-- fin de menú principal -->
+
+            <!-- menú de tienda -->
+            <nav class="navbar navbar-expand-md fondo-menu">
+                <div class="container-fluid d-flex justify-content-center">
+                    <a class="navbar-brand enlaces" href="http://www.flashcookie.com">
+                        <img src="resources/images/icons/flashcookie.png" alt="flashcookie" width="40"
+                            class="d-inline-block align-text-top">
+                        flashcookie
+                    </a>
+                    <a class="navbar-brand enlaces" href="http://www.paypal.com">
+                        <img src="resources/images/icons/paypal-logo.svg" alt="paypal" width="30"
+                            class="d-inline-block align-text-top">
+                        flashcookie
+                    </a>
+                    <a class="navbar-brand enlaces" href="http://www.redbubble.com">
+                        <img src="resources/images/icons/redbubble-logo.svg" alt="redbubble" width="30"
+                            class="d-inline-block align-text-top">
+                        redbubble
+                    </a>
+                </div>
+            </nav>
+            <!-- fin de menú de tienda -->
         </div>
 
-        <div class="side-grid-tienda">
-            <section class="shop-container">
-                <aside class="shop-links">
-                    <nav>
-                        <ul>
-                            <li><a href="http://paypal.com"><img src="resources/images/icons/paypal-logo.svg"
-                                        alt="logo de paypal"></a></li>
-                            <li><a href="http://flashcookie.com"><img src="resources/images/icons/flashcookie.png"
-                                        alt="logo de flashcookie"></a></li>
-                            <li><a href="http://redbubble.com"><img src="resources/images/icons/redbubble-logo.svg"
-                                        alt="logo de redbubble"></a></li>
-                        </ul>
-                    </nav>
-                </aside>
-            </section>
-        </div>
-        <div class="productos-grid-tienda">
-            <!-- sección novedades -->
+        <!-- sección novedades -->
+        <section class="productos-grid-tienda1">
             <div class="productos-container">
                 <div class="seccion-titulo">
                     <h3>Novedades</h3>
                 </div>
                 <section class="seccion-container">
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/sanvalentin2019 BG1.jpg"
-                                    alt="tarjeta de san valentín 2019">
-                                    <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>San Valentín 2019 BG1</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/sanvalentin2020 IG2.jpg" class="card-img-top"
+                            alt="san valentin">
+                        <div class="card-body">
+                            <h5 class="card-title">San Valentín 2020</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/sanvalentin2020.jpg" alt="tarjeta de san valentín 2020">
-                                <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>San Valentín 2020</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
+                        <div class="card-body">
+                            <h5 class="card-title">Minutemen</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/bojack.jpg" alt="Bojack Horseman">
-                                <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>Bojack Horseman</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
+                        <div class="card-body">
+                            <h5 class="card-title">Ilustraciones</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
-                    </div>
                 </section>
             </div>
-            <!-- Fin sección novedades -->
 
-            <!-- sección tienda, colecciones -->
+        </section>
+        <!-- Fin sección novedades -->
+
+        <section class="grid-air-tienda"></section>
+
+        <!-- sección tienda, colecciones -->
+        <section class="productos-grid-tienda2">
             <div class="productos-container">
                 <div class="seccion-titulo">
                     <h3>Colecciones</h3>
                 </div>
                 <section class="seccion-container">
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/sanvalentin2019 BG1.jpg"
-                                    alt="tarjeta de san valentín 2019">
-                                    <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>San Valentín 2019 BG1</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/minutemen.jpg" class="card-img-top" alt="Minutemen">
+                        <div class="card-body">
+                            <h5 class="card-title">Minutemen</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/sanvalentin2020.jpg" alt="tarjeta de san valentín 2020">
-                                <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>San Valentín 2020</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/illustracion.jpg" class="card-img-top" alt="Ilustracion">
+                        <div class="card-body">
+                            <h5 class="card-title">Ilustraciones</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="card-image">
-                                <img src="resources/images/trabajos/bojack.jpg" alt="Bojack Horseman">
-                                <div class="card-title">ejemplo</div>
-                            </div>
-                            <div class="card-content">
-                                <h3>Bojack Horseman</h3>
-                                <p>vale por una descripción de la imagen</p>
-                            </div>
+                    <div class="card" style="width: 18rem;">
+                        <img src="resources/images/trabajos/historieta.jpg" class="card-img-top" alt="Historieta">
+                        <div class="card-body">
+                            <h5 class="card-title">Historietas</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">ver mas aquí</a>
                         </div>
                     </div>
                 </section>
             </div>
-            <!-- Fin sección tienda -->
-        </div>
+        </section>
+        <!-- Fin sección tienda -->
 
         <div class="footer-grid-tienda">
             <!-- inicio de footer -->
@@ -193,6 +209,11 @@
             <!-- fin de footer -->
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
 </body>
 
