--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
@@ -20,7 +28,7 @@
                             src="resources/images/logos/PerfilB1.png" alt="Logo principal de home"></a></div>
                 <div class="title-container">
                     <div>
-                        <h1 class="title"><a class="title" href="index.html">Anabella Avena</a></h1>
+                        <h1 class="maintitle"><a class="maintitle" href="index.html">Anabella Avena</a></h1>
                     </div>
                     <div>
                         <p class="subtitle">Ilustradora & Diseñadora Gráfica</p>
@@ -30,17 +38,36 @@
             <!-- fin de header -->
         </div>
         <div class="menu-grid-contacto">
-            <div class="main-menu-container fondo-menu">
-                <nav class="main-menu-nav">
-                    <ul class="main-menu">
-                        <li class="menu-list"><a href="inicio.html">Inicio</a></li>
-                        <li class="menu-list"><a href="portfolio.html">Portfolio</a></li>
-                        <li class="menu-list"><a href="about-me.html">Sobre mí</a></li>
-                        <li class="menu-list"><a href="tienda.html">Tienda</a></li>
-                        <li class="menu-list"><a href="contacto.html">Contacto</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <!-- menú principal -->
+            <nav class="navbar navbar-expand-md fondo-menu">
+                <div class="container-fluid d-flex justify-content-end">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a aria-current="page" href="inicio.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="about-me.html">Sobre Mí</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="tienda.html">Tienda</a>
+                            </li>
+                            <li class="nav-item">
+                                <a aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <!-- fin de menú principal -->
         </div>
 
         <div class="mensaje-grid-contacto">
@@ -108,6 +135,11 @@
             <!-- fin de footer -->
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    </script>
 
 </body>
 
